<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#D3D3D3" />

    <TextView
        android:id="@+id/labelOperatorDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryLightColor"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/label_driver_conductor_details" />

    <LinearLayout
        android:id="@+id/subItemOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/labelFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/label_first_name"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/labelLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/label_last_name"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/labelPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/label_phone_number"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/labelIdNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/label_id_number"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textIdNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>