<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="16dp" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#D3D3D3" />

    <TextView
        android:id="@+id/labelVehicleDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryLightColor"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/label_vehicle_details" />

    <LinearLayout
        android:id="@+id/subItemVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/labelVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/label_vehicle_type"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/labelVehicleCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/label_vehicle_capacity"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textVehicleCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>